@@ -1,0 +1,3 @@
+# mean, investigation_time=50.0, imt="PGA"
+lon,lat,depth,poe-0.0137,poe-0.0192,poe-0.0269,poe-0.0376,poe-0.0527,poe-0.0738,poe-0.103,poe-0.145,poe-0.203,poe-0.284,poe-0.397,poe-0.556,poe-0.778,poe-1.09
+0.50000,-0.50000,0.00000,9.141392E-02,8.689965E-02,7.689869E-02,6.061416E-02,4.030860E-02,2.148314E-02,8.733686E-03,2.429053E-03,4.320280E-04,3.517228E-05,3.801857E-08,0.000000E+00,0.000000E+00,0.000000E+00
