@@ -1,0 +1,38 @@
+[general]
+
+description = Classical PSHA with source specific logic tree (3**2 realizations)
+calculation_mode = classical
+random_seed = 23
+
+[geometry]
+
+sites = 0.5 -0.5
+
+[logic_tree]
+
+number_of_logic_tree_samples = 0
+
+[erf]
+
+rupture_mesh_spacing = 5
+width_of_mfd_bin = 0.1
+
+[site_params]
+
+reference_site_class = C
+
+[calculation]
+
+source_model_logic_tree_file = source_model_logic_tree.xml
+gsim_logic_tree_file = gmpe_logic_tree.xml
+investigation_time = 50.0
+intensity_measure_types_and_levels = {"PGA": [0.0137, 0.0192, 0.0269, 0.0376, 0.0527, 0.0738, 0.103, 0.145, 0.203, 0.284, 0.397, 0.556, 0.778, 1.09]}
+truncation_level = 3
+maximum_distance = 200.0
+
+[output]
+
+export_dir = /tmp
+mean_hazard_curves = true
+
+
